# CHAT_BOT_DA

./: .dockerignore  Dockerfile  chatbot.sql
AI-Datanalysis-main/: .env.example  .env.local.example  .env.tose.example  .gitignore  README.md  app.py  pyproject.toml
AI-Datanalysis-main/.devcontainer/: README.md
AI-Datanalysis-main/.streamlit/: README.md
AI-Datanalysis-main/.streamlit_cookies_component/: README.md
AI-Datanalysis-main/ai_datanalysis/: README.md  __init__.py  app.py  auth.py  config.py  llm_factory.py  paths.py  secure_cookie_manager.py  styles.py
AI-Datanalysis-main/ai_datanalysis/core/: README.md  VI_QUERY_STRUCTURES.md  __init__.py  agent.py  cache.py  data_catalog.py  executors.py  fast_path.py  join_planner.py  normalization.py  prompt_builder.py  router.py  selector.py  semantic_columns.py  vi_vocab.py
AI-Datanalysis-main/ai_datanalysis/services/: README.md  chart_service.md  chart_service.py  chat_service.py  dashboard_service.py  data_service.md  data_service.py  dataset_service.py  llm_service.md  llm_service.py  ops_service.py  render_service.py  (+2 more)
AI-Datanalysis-main/assets/: README.md
AI-Datanalysis-main/data/: README.md
AI-Datanalysis-main/docs/: DEPLOY_TOSE.md  SYSTEM_ARCHITECTURE.md
AI-Datanalysis-main/notebooks/: global-employment-unemployment-analysis.ipynb
AI-Datanalysis-main/prompts/: README.md
AI-Datanalysis-main/scripts/: README.md  extract_pkl.py  generate_chapter3_docx.py  standardize_all_plots.py
AI-Datanalysis-main/tests/: README.md  test_chat_scoped_dataset_service.py  test_config.py  test_dashboard_service.py  test_data_catalog.py  test_executor.py  test_fast_path.py  test_join_planner.py  test_normalization.py  test_prompt_builder.py  test_router.py  test_selector.py  test_ui_render.py
(+35 files in other folders)
