[tool.poetry]
name = "ai-datanalysis"
version = "0.3.0"
description = "AI-powered chatbot for data analysis."
authors = ["Fabrício Siqueira"]
license = "MIT"
readme = "README.md"
package-mode = true
packages = [{ include = "ai_datanalysis" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core data stack
numpy = "^1.26.4"
pandas = "^2.2.3"
scipy = "^1.13.0"
statsmodels = "^0.14.2"
scikit-learn = "^1.8.0"

# App UI
streamlit = "^1.55.0"

# Visualization
plotly = "^5.22.0"

# Database
sqlalchemy = "^2.0.47"
pymysql = "^1.1.2"
cryptography = "^46.0.5"

# AI orchestration
langchain = "^1.2.12"
langchain-community = "^0.4.1"
langchain-groq = "^1.1.2"

# Optional safe code execution
e2b-code-interpreter = { version = "^2.4.1", optional = true }

# File / Excel support
openpyxl = { version = "^3.1.2", optional = true }
xlsxwriter = { version = "^3.2.0", optional = true }

# Optional plotting
matplotlib = { version = "^3.8.4", optional = true }

# Optional API backend
fastapi = { version = "^0.115.0", optional = true }
uvicorn = { version = "^0.30.0", optional = true }
python-multipart = { version = "^0.0.9", optional = true }

# Config
python-dotenv = { version = "^1.0.1", optional = true }

# Utilities
tabulate = "^0.9.0"

# Dev / quality
pytest = { version = "^8.3.3", optional = true }
ruff = { version = "^0.7.1", optional = true }

[tool.poetry.extras]
excel = ["openpyxl", "xlsxwriter"]
sandbox = ["e2b-code-interpreter"]
plots = ["matplotlib"]
api = ["fastapi", "uvicorn", "python-multipart"]
dotenv = ["python-dotenv"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
